# AnimationEngine

./: CMakeLists.txt
src/: Logger.h  Main.cpp  Window.cpp  Window.h
